# form-block

./: CHANGELOG.md  Makefile  README.md  docker-compose.yml  repository.toml  towncrier.toml
backend/: .gitignore  .mrbob.ini  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.acceptance  LICENSE.md  Makefile  README.md  bobtemplate.cfg  instance.yaml  pyproject.toml
backend/news/: +fix-schema-length-validation.bugfix  +remove-form-serializer.internal  +rename.internal  +testing-profile.tests  +vocabularies-package.internal  11.internal  12.internal  13.internal  14.internal  16.internal  19.bugfix  19.internal  21.feature  8.internal
backend/scripts/: create_site.py
backend/src/collective/volto/formsupport/: __init__.py
backend/src/plone/formblock/: __init__.py  configure.zcml  events.py  interfaces.py  profiles.zcml  setuphandlers.py  types.py  utils.py
backend/src/plone/formblock/browser/: configure.zcml
backend/src/plone/formblock/browser/templates/: email_confirm_view.pt
backend/src/plone/formblock/captcha/: __init__.py  configure.zcml  hcaptcha.py  honeypot.py  norobots.py  recaptcha.py
backend/src/plone/formblock/datamanager/: catalog.py  configure.zcml
backend/src/plone/formblock/locales/: plone.formblock.pot
backend/src/plone/formblock/locales/de/LC_MESSAGES/: plone.formblock.po
backend/src/plone/formblock/locales/es/LC_MESSAGES/: plone.formblock.po
backend/src/plone/formblock/locales/fr/LC_MESSAGES/: plone.formblock.po
backend/src/plone/formblock/locales/it/LC_MESSAGES/: plone.formblock.po
backend/src/plone/formblock/locales/pt_BR/LC_MESSAGES/: plone.formblock.po
backend/src/plone/formblock/processors/: email.py  store.py
backend/src/plone/formblock/profiles/default/: browserlayer.xml  metadata.xml
backend/src/plone/formblock/profiles/default/registry/: plone.formblock.interfaces.IFormSettings.xml
backend/src/plone/formblock/profiles/initial/registry/: collective.z3cform.norobots.browser.interfaces.INorobotsWidgetSettings.xml  plone.base.interfaces.controlpanel.IMailSchema.xml  plone.formwidget.hcaptcha.interfaces.IHCaptchaSettings.xml  (+1 more)
backend/src/plone/formblock/profiles/uninstall/: browserlayer.xml
backend/src/plone/formblock/restapi/deserializer/: blocks.py
backend/src/plone/formblock/restapi/serializer/: blocks.py  configure.zcml
backend/src/plone/formblock/restapi/services/: base.py
backend/src/plone/formblock/scripts/: cleansing.py
backend/src/plone/formblock/setuphandlers/: __init__.py  initial.py
backend/src/plone/formblock/setuphandlers/examplecontent/: .gitignore  relations.json
backend/src/plone/formblock/testing/: __init__.py  configure.zcml  event_handler.py
backend/src/plone/formblock/upgrades/: __init__.py  configure.zcml
backend/src/plone/formblock/utils/: __init__.py  blocks.py  datamanager.py  email.py  otp.py
backend/src/plone/formblock/vocabularies/: configure.zcml  templates.py
backend/tests/: conftest.py
backend/tests/functional/: conftest.py
backend/tests/functional/captcha/: conftest.py  test_vocabulary.py
backend/tests/functional/captcha/hcaptcha/: conftest.py  test_captcha.py  test_captcha_no_settings.py
backend/tests/functional/captcha/honeypot/: conftest.py  test_captcha.py
backend/tests/functional/captcha/norobots/: conftest.py  test_captcha.py
backend/tests/functional/captcha/recaptcha/: conftest.py  test_captcha.py  test_captcha_no_settings.py
backend/tests/functional/deserializer/: test_deserialize_block.py
backend/tests/functional/events/: test_event.py
backend/tests/functional/processors/email/: conftest.py  test_send_attachments.py  test_send_failures.py  test_send_headers.py  test_send_metadata.py  test_send_recipients.py  test_send_sender.py  test_send_subject.py  test_send_success.py
backend/tests/functional/processors/store/: conftest.py  test_export_csv.py  test_store.py  test_unable_to_store.py
backend/tests/functional/serializer/: test_serialize_attachments.py  test_serialize_block.py  test_serialize_hcaptcha.py  test_serialize_recaptcha.py
backend/tests/setup/: test_setup_install.py  test_setup_uninstall.py
backend/tests/utils/: conftest.py  test_blocks.py  test_datamanager.py  test_email.py
backend/tests/vocabularies/: test_voc_captchas.py  test_voc_templates.py
(+37 files in other folders)
