[project]
name = "plone.formblock"
dynamic = ["version"]
description = "Plone support for JSON schema based block forms."
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.11"
authors = [
    { name = "Plone Community", email = "releasemanager@plone.org" },
    { name = "RedTurtle Technology", email = "sviluppo@redturtle.it" },
]
keywords = [
    "CMS",
    "Plone",
    "Python",
    "Volto",
    "forms",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Plone",
    "Framework :: Plone :: 6.1",
    "Framework :: Plone :: 6.2",
    "Framework :: Plone :: Addon",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Products.CMFPlone",
    "plone.api",
    "plone.restapi",
    "plone.volto",
    "souper.plone",
    "beautifulsoup4",
    "jsonschema",
    "pyotp",
]

[project.optional-dependencies]
honeypot = [
    "collective.honeypot",
]
hcaptcha = [
    "plone.formwidget.hcaptcha",
]
recaptcha = [
    "plone.formwidget.recaptcha",
]
norobots = [
    "collective.z3cform.norobots",
]
test = [
    "collective.honeypot",
    "collective.MockMailHost",
    "collective.z3cform.norobots",
    "horse-with-no-namespace",
    "plone.app.testing",
    "plone.formwidget.hcaptcha",
    "plone.formwidget.recaptcha",
    "plone.restapi[test]",
    "pytest",
    "pytest-cov",
    "pytest-plone>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/plone/form-block"
PyPI = "https://pypi.org/project/plone.formblock"
Source = "https://github.com/plone/form-block"
Tracker = "https://github.com/plone/form-block/issues"


[project.entry-points."plone.autoinclude.plugin"]
target = "plone"

[tool.uv]
managed = false

[tool.hatch.version]
path = "src/plone/formblock/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
strict-naming = true

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/plone"]

[tool.towncrier]
directory = "news/"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## {version} ({project_date})"
template = "news/.changelog_template.jinja"
issue_format = "[#{issue}](https://github.com/plone/form-block/issues/{issue})"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes:"
showcontent = true

[[tool.towncrier.type]]
directory = "feature"
name = "New features:"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug fixes:"
showcontent = true

[[tool.towncrier.type]]
directory = "internal"
name = "Internal:"
showcontent = true

[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation:"
showcontent = true

[[tool.towncrier.type]]
directory = "tests"
name = "Tests"
showcontent = true

[tool.ruff]
target-version = "py311"
line-length = 88
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
]
lint.ignore = [
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.isort]
case-sensitive = false
no-sections = true
force-single-line = true
from-first = true
lines-after-imports = 2
lines-between-types = 1
order-by-type = false

[tool.ruff.format]
preview = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "RUF001", "S101"]

[tool.check-manifest]
ignore = [
    ".editorconfig",
    ".flake8",
    "dependabot.yml",
    "mx.ini",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source_pkgs = ["plone.formblock", "tests"]
branch = true
parallel = true
omit = [
  "src/plone/formblock/locales/*.py",
]